--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -59,7 +59,7 @@
 
     ul {
       text-align: left;
-      padding-left: 40px;
+      padding-left: 30px;
       margin-bottom: 0;
     }
 
@@ -68,7 +68,9 @@
       font-size: 18px;
       list-style-type: symbols("+");
       list-style-position: inside;
-
+    }
+    li::-moz-list-bullet {
+      content: "+ ";
     }
   }
 
@@ -99,8 +101,12 @@
     &:hover, &:focus, &:focus-visible {
       text-decoration-color: var(--link-color);
     }
+  }
 
-
+  #now-playing {
+    max-width: 25ch;
+    margin-left: 1.2ch;
+    text-indent: -1.2ch;
   }
 }
 
