--- a/src/vars.scss
+++ b/src/vars.scss
@@ -1,6 +1,6 @@
 :root {
   --text: white;
-  --background: #1f2022;
+  --background: hsl(230, 5%, 13%);
   --about-me: #F1F1F1;
   --grid-background: var(--background);
   --grid-header-background: var(--background);
