Changed border color

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -6,7 +6,8 @@
   --grid-header-background: var(--background);
   --grid-header-text: #F1F1F1;
   --grid-element-background: hsl(218, 24%, 25%);
-  --grid-element-border: #6f6f6f;
+  --grid-element-border: hsl(218, 24%, 29%);
+  //--grid-element-border: #6f6f6f;
   --grid-element-shadow: rgba(255, 255, 255, 0.3);
   --grid-element-header: rgb(169 162 228 / 100%);
   --grid-element-subheader: darkgrey;
