--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   //background: url("./images/y-so-serious-white.png") repeat;
-  background-color: var(--background) !important;
+  background: var(--background) !important;
 }
 
 
