--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -26,12 +26,13 @@
     width: fit-content;
 
     #info-parent {
-      display: flex;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: 5px;
+      max-width: 105ch;
 
       @media screen and (max-width: 660px) {
-        flex-direction: column;
+        grid-template-columns: 1fr;
       }
     }
 
@@ -54,8 +55,9 @@
 
     p {
       font-family: "Montserrat", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       margin: 0;
+      text-align: left;
     }
 
     ul {
@@ -106,7 +108,6 @@
 
   #now-playing {
     max-width: 25ch;
-    margin-left: 1.2ch;
     text-indent: -1.2ch;
   }
 }
